Use margin-left to avoid horizontal scroll

--- a/static/src/stylesheets/module/site-messages/_support-the-guardian-banner.scss
+++ b/static/src/stylesheets/module/site-messages/_support-the-guardian-banner.scss
@@ -76,11 +76,11 @@
     position: relative;
 
     @include mq(leftCol) {
-        left: gs-span(2) + $gs-gutter;
+        margin-left: gs-span(2) + $gs-gutter;
     }
 
     @include mq(wide) {
-        left: gs-span(3) + $gs-gutter;
+        margin-left: gs-span(3) + $gs-gutter;
     }
 }
 
